--- a/src/views/Books/Books.css
+++ b/src/views/Books/Books.css
@@ -1,6 +1,22 @@
 .Books {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2vh;
   color: white;
   background-color: rgba(255, 255, 255, 0.192);
   border-radius: 10px;
   padding: 2vh;
+}
+
+.BookList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.BookList img {
+  height: 15vh;
 }
